Core 1.20.5 update