@@ -1,59 +1,71 @@
 package me.roundaround.nicerportals.mixin;
 
-import java.util.HashSet;
-import java.util.Set;
-import java.util.stream.Collectors;
-
-import org.spongepowered.asm.mixin.Mixin;
-import org.spongepowered.asm.mixin.Shadow;
-import org.spongepowered.asm.mixin.injection.At;
-import org.spongepowered.asm.mixin.injection.Inject;
-import org.spongepowered.asm.mixin.injection.callback.CallbackInfo;
-
-import me.roundaround.nicerportals.NicerPortalsMod;
-import net.minecraft.block.Block;
+import com.llamalad7.mixinextras.injector.v2.WrapWithCondition;
+import me.roundaround.nicerportals.config.NicerPortalsConfig;
 import net.minecraft.block.BlockState;
 import net.minecraft.block.Blocks;
 import net.minecraft.client.render.WorldRenderer;
 import net.minecraft.client.world.ClientWorld;
+import net.minecraft.sound.SoundCategory;
+import net.minecraft.sound.SoundEvent;
 import net.minecraft.util.math.BlockPos;
+import org.spongepowered.asm.mixin.Mixin;
+import org.spongepowered.asm.mixin.Shadow;
+import org.spongepowered.asm.mixin.Unique;
+import org.spongepowered.asm.mixin.injection.At;
+import org.spongepowered.asm.mixin.injection.Inject;
+import org.spongepowered.asm.mixin.injection.callback.CallbackInfo;
+
+import java.util.HashSet;
+import java.util.Set;
 
 @Mixin(WorldRenderer.class)
 public abstract class WorldRendererMixin {
-  private Set<Long> portalBreakTicks = new HashSet<>();
+  @Unique
+  private final Set<Long> portalBreakTicks = new HashSet<>();
 
   @Shadow
   private ClientWorld world;
 
-  @Inject(method = "processWorldEvent", at = @At(value = "INVOKE", target = "Lnet/minecraft/block/BlockState;getSoundGroup()Lnet/minecraft/sound/BlockSoundGroup;"), cancellable = true)
-  private void processWorldEvent(int eventId, BlockPos pos, int data, CallbackInfo info) {
-    if (!NicerPortalsMod.CONFIG.MOD_ENABLED.getValue()
-        || !NicerPortalsMod.CONFIG.DEDUPE_BREAK_SOUND.getValue()) {
-      return;
+  @WrapWithCondition(
+      method = "processWorldEvent", at = @At(
+      value = "INVOKE",
+      target = "Lnet/minecraft/client/world/ClientWorld;playSoundAtBlockCenter(Lnet/minecraft/util/math/BlockPos;" +
+          "Lnet/minecraft/sound/SoundEvent;Lnet/minecraft/sound/SoundCategory;FFZ)V"
+  )
+  )
+  private boolean onlyPlayFirstSound(
+      ClientWorld world,
+      BlockPos blockPos,
+      SoundEvent soundEvent,
+      SoundCategory soundCategory,
+      float volume,
+      float pitch,
+      boolean useDistance
+  ) {
+    if (!NicerPortalsConfig.getInstance().modEnabled.getValue() ||
+        !NicerPortalsConfig.getInstance().dedupeBreakSound.getValue()) {
+      return true;
     }
 
-    BlockState blockState = Block.getStateFromRawId(data);
+    BlockState blockState = world.getBlockState(blockPos);
     if (!blockState.getBlock().equals(Blocks.NETHER_PORTAL)) {
-      return;
+      return true;
     }
 
     long tick = world.getTime();
-    if (portalBreakTicks.contains(tick) || portalBreakTicks.contains(tick - 1)) {
-      // TODO: Investigate how to only skip the playSound call instead of
-      // cancelling the entire processWorldEvent method
-      world.addBlockBreakParticles(pos, blockState);
-      info.cancel();
-    }
+    boolean deny = this.portalBreakTicks.contains(tick) || this.portalBreakTicks.contains(tick - 1);
 
-    portalBreakTicks.add(tick);
+    this.portalBreakTicks.add(tick);
+    return !deny;
   }
 
   @Inject(method = "tick", at = @At(value = "TAIL"))
   private void tick(CallbackInfo info) {
-    long tick = world.getTime();
-    portalBreakTicks.stream()
+    long tick = this.world.getTime();
+    this.portalBreakTicks.stream()
         .filter((portalBreakTick) -> tick >= portalBreakTick + 2)
-        .collect(Collectors.toList())
-        .forEach(portalBreakTicks::remove);
+        .toList()
+        .forEach(this.portalBreakTicks::remove);
   }
 }
